site/details.css
.getInfo {
  position:absolute;
  width:48px;
  height:48px;
/*  opacity:1.0;*/
  background:white;
  background-color:white;
  border:solid 1px #CCC;
  z-index: 999;
  color:black;
  font-family: 'Museo'; 
  
  -moz-box-shadow: 2px 2px 10px #a0a0a0;
  
  -moz-transition-property: left,width,height;
  -moz-transition-timing-function: ease-in-out;
  -moz-transition-duration: 0.20s;
  -webkit-transition-property: left,width,height;
  -webkit-transition-timing-function: ease-in-out;
  -webkit-transition-duration: 0.20s;
  -o-transition-property: left,width,height;
  -o-transition-timing-function: ease-in-out;
  -o-transition-duration: 0.20s;
}
.getInfo > .appBadge {
  position:absolute;
  display:inline-block;
  width:80px;
  height:116px;
  text-align:center;
  position:relative;
  left:-1px;
  top:7px;
  cursor:pointer;
}
.getInfo > .appBadge .app_icon {
  margin-top:-4px;
  margin-left:4px;
  width:96px;
  height:96px;
  background-size:100%;
}

.getInfo > .appBadge >.appBadgeName {
  font-family: Museo, Tahoma, sans-serif;
  font-size: 12px;
  margin-top: 5px;
  margin-left: 23px;
}
.getInfo > .appData {
  position:absolute;
  top:10px;
  left:90px;
  width:208px;
}
.getInfo > .appData > .appDataBox {
  font:9pt Arial;
}
.getInfo > .appData > .appDataBox> .appDataLabel {
  display:inline-block;
  width:80px;
}
.getInfo > .appData > .appDataBox> .appDataValue {
  display:inline-block;
  width:124px;
}
.getInfo > .desc {
  position:absolute;
	font-family:'Museo', Tahoma, sans-serif;
  font-size:10px;
  width:264px;
  left:10px;
  padding-top:8px;
  height:80px;
}

.developerName {
	font-family:'Museo', Tahoma, sans-serif;
  font-size:12pt;
  text-align:right;
  padding-right:12px;
}
.developerName a {
  color:black;
}
.developerName a:hover {
  color:#3875D7;
}
.developerLink {
	font-family:'Museo', Tahoma, sans-serif;
  font-size:10pt;
  text-align:right;
  margin-right:12px;
  overflow-x:hidden;
  white-space:nowrap;
}
.developerName a {
  color:black;
}
.developerName a:hover {
  color:#3875D7;
}


.getInfo > .appProperties {
  position:absolute;
  left:12px;
  width:270px;
  top:200px;
  height:150px;
  padding:4px;
  margin-top:8px;
  font:8pt Arial;
  overflow-y:auto;
  border-top:1px solid #d0d0d0;
  -moz-corner-radius:2px;
}
.getInfo > .appProperties > .appDataBox {
  margin-bottom:2px;
}

.getInfo > .appProperties > .appDataBox> .appDataLabel {
  font:bold 8pt Arial;
  display:inline-block;
  width:90px;
  overflow:hidden;
}
.getInfo > .appProperties > .appDataBox> .appDataValue {
  display:inline-block;
  width:156px;
  overflow:hidden;
}

.hdiv {
  width:100%;
  height:1px;
  margin-top:4px;
  margin-bottom:4px;
  background-color:#d0d0d0
}

.getInfo > .deleteText {
  position: absolute;    
  bottom: 1em;
  right: 1em;
  color: #900;
  cursor: pointer;
}

.getInfo > .deleteText:hover {
  color: #c33;
}

